--- a/adnextTestProject/app/build.gradle
+++ b/adnextTestProject/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile(name: 'adnext.1.0.0.0', ext: 'aar')       // Line Multimedia SNAPSHOT
+    compile(name: 'adnext.1.0.0.0', ext: 'aar')                      // ADNext Library
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
