--- a/adnextTestProject/app/src/main/AndroidManifest.xml
+++ b/adnextTestProject/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TestActivity1" />
-        <activity android:name=".TestActivity2" />
-        <activity android:name=".TestActivity3" />
-        <activity android:name=".TestActivity4"></activity>
+        <activity android:name=".banner.ADNextBannerActivity" />
+        <activity android:name=".banner.ADNextBannerDynamicActivity" />
+        <activity android:name=".banner.ADNextBannerDynamicSizeActivity" />
+        <activity android:name=".interstitial.ADNextInterstitialActivity"></activity>
     </application>
 
 </manifest>
